Worked adding one img and updating the general aspect of the webpage

--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
     <title>Pagina Personal de Guillermo GB</title>
 </head>
 <header>
-    <h1 class="prueba">Esta es mi página personal</h1>
+    <h1 class="prueba">Guillermo GB</h1>
 </header>
 <body>
     <div class="contenido">
         <h2>Prueba de contenido</h2>
-        <p>Rauw Alejandro</p>
     </div>
     <div class="biografia">
+        <img src="img/IMG_9976.jpg" alt="" class="fotoyo">
         <h2 class="yo">Un poco sobre mi</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, corrupti veritatis! Quisquam sit laborum non facilis architecto est repudiandae vel illum nostrum rerum praesentium esse pariatur, ullam cupiditate eaque vero fugit aspernatur nihil cumque recusandae voluptates eos. Et quas velit iure, debitis delectus inventore officia repellat assumenda impedit! Eius dolores quos, tempora ratione temporibus eaque voluptatum dignissimos, facilis maiores vel minus nisi asperiores adipisci impedit voluptatibus modi eligendi? Perspiciatis, ipsa ducimus harum ullam architecto totam vel recusandae officiis id molestiae praesentium nostrum debitis odio inventore, minus cumque dolore in. Rem a suscipit dignissimos reprehenderit odio nam aliquam, maxime quam ea. Hic repudiandae eveniet eius? Eius deserunt illo ipsum similique corrupti perferendis, debitis ad! Deleniti, quis omnis. Nulla, odio voluptatum omnis aliquid aperiam suscipit provident alias obcaecati. A porro consectetur ut omnis dicta itaque eum ab culpa obcaecati in libero id nostrum rem facere, consequuntur deserunt voluptatibus quam quaerat corrupti, aperiam nisi voluptate tenetur qui. Sunt autem quidem voluptatem, et voluptatum, saepe amet sed obcaecati, nostrum fuga aliquam odit quia. Voluptatem aut alias quo eos, ex fuga nam magnam, quam ullam repellat voluptatum debitis dolor hic earum. Quae ea, dolor autem debitis illo aperiam doloremque exercitationem libero est repellat placeat rem nihil doloribus minima nulla magni excepturi laborum ut quia aspernatur sint suscipit architecto odio quo! Voluptas deleniti numquam repudiandae, perferendis laboriosam expedita officiis unde. Facere dignissimos, provident dolor excepturi recusandae, corrupti ipsa autem molestias quos eligendi perferendis dolorem reprehenderit dicta adipisci optio deleniti. Magni qui minus saepe facere deserunt nam eum vel assumenda porro. Aperiam, tempore officiis dolor quis culpa mollitia sed nihil deserunt minus. Nobis sapiente dignissimos sunt excepturi. Dignissimos, porro et? Ab odio voluptate cumque illum. Exercitationem dolore perspiciatis laudantium quia, odio praesentium? Eligendi vitae culpa veritatis ut possimus, doloribus reiciendis nemo totam, non doloremque dolor repellendus quod.</p>
+        <p>Soy nacido y criado en el Norte de México, me encanta la comida china, ver o rever peliculas, el desarrollo de aplicaciónes y decir que "Dios esta en la lluvia" cada vez que llueve.</p>
+        <h2 class="listaseries">Series Favoritas</h2>
+        <ul class="listaser">
+            <li>Sense 8</li>
+            <li>The Good Place</li>
+            <li>It's a Sin</li>
+        </ul>
     </div>
     
 </body>
