--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
     <link rel="stylesheet" href="estilos.css">
     <title>Pagina Personal de Guillermo GB</title>
 </head>
-<header>
-    <h1 class="prueba">Guillermo GB</h1>
+<header class="prueba">
+    <div class="nav-links">
+        <nav>
+            <ul>
+                <li><a href="/">Principal</a></li>
+                <li><a href="/">Blog</a></li>
+                <li><a href="/">Servicios</a></li>
+                <li><a href="/">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div >
+        <div class="header-name">
+            <p>Guillermo <span><strong>gonzalez</strong></span></p>
+        </div>
+    </div>
 </header>
 <body>
     <div class="contenido">
