cambios generales sobre el tamaño de fuente y la posicion de la foto

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <body>
     <div class="contenido">
         <h2>Prueba de contenido</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PwWHL3RyQgk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="biografia">
         <img src="img/IMG_9976.jpg" alt="" class="fotoyo">
