Cambios a la parte personal

--- a/index.html
+++ b/index.html
@@ -42,14 +42,18 @@
     </div>
     <div class="biografia">
         <img src="img/IMG_9976.jpg" alt="" class="fotoyo">
-        <h2 class="yo">Un poco sobre mi</h2>
-        <p>Soy nacido y criado en el Norte de México, me encanta la comida china, ver o rever peliculas, el desarrollo de aplicaciónes y decir que "Dios esta en la lluvia" cada vez que llueve.</p>
-        <h2 class="listaseries">Series Favoritas</h2>
-        <ul class="listaser">
-            <li>Sense 8</li>
-            <li>The Good Place</li>
-            <li>It's a Sin</li>
-        </ul>
+        <div class="introbio">
+            <h2 class="yo">Un poco sobre mi</h2>
+            <p>Soy nacido y criado en el Norte de México, me encanta la comida china, ver o rever peliculas, el desarrollo de aplicaciones y decir que "Dios esta en la lluvia" cada vez que llueve.</p>
+        </div>
+        <div class='seriesfav'>
+            <h2 class="listaseries">Series Favoritas</h2>
+            <ul class="listaser">
+                <li>Sense 8</li>
+                <li>The Good Place</li>
+                <li>It's a Sin</li>
+            </ul>
+        </div>
     </div>
     <div class='fondo'>
         <p>Guillermo González | 2021</p>
